medical_records api completed
